<resources>
    <string name="app_name">Blockwatch</string>
    <string name="action_settings">Settings</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="fab_text">Transaction Hash Refreshed</string>
<!--    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <string name="banner_ad_unit_id">ca-app-pub-0730144369893618/9179460812</string>
    <string name="relayed_by">Relayed By: </string>
    <string name="tx_hash">TX Hash: </string>
    <string name="dummy_hash">b5357533bf43d6793aa24d91d6a01055128bff64730627bbb3a512b04d2e9043</string>
    <string name="sync_account_type">blockwatch.example.com</string>
    <string name="content_authority">com.singularityfuture.blockwatch</string>
    <string name="title_widget_">Blockwatch</string>
    <string name="Transaction">Transaction</string>
    <string name="blockwatch_main_screen">Blockwatch Main Screen</string>
    <string name="main_screen_toolbar">Main Screen Toolbar</string>
    <string name="refresh_transaction_hash">Refresh Transaction Hash</string>
    <string name="watch_face">Watch Face</string>
    <string name="watch_fragment">Watch Fragment</string>
    <string name="google_ad">Google Ad</string>
    <string name="transaction_hash_label">Transaction Hash Label</string>
    <string name="transaction_hash">Transaction Hash</string>
    <string name="transaction_relayed_by_label">Transaction Relayed By Label</string>
    <string name="transaction_relayed_by_ip_address">Transaction Relayed By IP Address</string>
    <string name="map_of_ip_address">Map of IP Address</string>
    <string name="transaction_fragment">Transaction Fragment</string>
    <string name="transaction_toolbar">Transaction Toolbar</string>
    <string name="transaction_frame">Transaction Frame</string>
    <string name="blockwatch_widget">Blockwatch Widget</string>
    <string name="widget_layout">Widget Layout</string>
    <string name="blockwatch_icon">Blockwatch Icon</string>
    <string name="blockwatch_face">Blockwatch Face</string>
    <string name="black_white_map_style">[{"elementType": "labels","stylers":[{"visibility": "off"}]},{"elementType": "labels.icon","stylers":[{"visibility": "on"}]
  },{"elementType": "labels.text","stylers": [
      {
        "visibility": "on"
      }
    ]
  },
  {
    "elementType": "labels.text.fill",
    "stylers": [
      {
        "color": "#000000"
      }
    ]
  },
  {
    "elementType": "labels.text.stroke",
    "stylers": [
      {
        "color": "#ffffff"
      }
    ]
  },
  {
    "featureType": "administrative",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "landscape",
    "stylers": [
      {
        "color": "#ffffff"
      }
    ]
  },
  {
    "featureType": "poi",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "road",
    "elementType": "geometry.fill",
    "stylers": [
      {
        "color": "#000000"
      },
      {
        "weight": 1
      }
    ]
  },
  {
    "featureType": "road",
    "elementType": "geometry.stroke",
    "stylers": [
      {
        "color": "#000000"
      },
      {
        "weight": 0.8
      }
    ]
  },
  {
    "featureType": "road",
    "elementType": "labels",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "transit",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "water",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  }
]</string>
    <string name="relayed_by_ip_location">Relayed By IP Location</string>
    <string name="location_of_ip">Location based on the Relayed By IP Address of the current transaction</string>
    <string name="style_parsing_failed">Style parsing failed.</string>
    <string name="cant_find_style">Can\'t find style. Error:</string>
    <string name="explorer_error">Explorer error:</string>
    <string name="inline_preferences">Inline Preferences</string>
    <string name="title_checkbox_preference">Checkbox Preference</string>
    <string name="summary_checkbox_preference">Summary Checkbox</string>
    <string name="dialog_based_preferences">Dialog Based Preferences</string>
    <string name="title_edittext_preference">Edit Text Preference</string>
    <string name="summary_edittext_preference">Summary Edit Text Preference</string>
    <string name="dialog_title_edittext_preference">Dialog Text Edit Text</string>
    <string name="title_list_preference">Title List Preference</string>
    <string name="summary_list_preference">Summary List Preference</string>
    <string name="dialog_title_list_preference">Dialog Title List Preferences</string>
    <string name="launch_preferences">Launch Preferences</string>
    <string name="title_fragment_preference">Title Fragment Preference</string>
    <string name="summary_fragment_preference">Summary Fragment Preference</string>
    <string name="title_intent_preference">Title Intent Preference</string>
    <string name="summary_intent_preference">Summary Intent Preference</string>
    <string name="preference_attributes">Preference Attributes</string>
    <string name="title_parent_preference">Title Parent Preference</string>
    <string name="summary_parent_preference">Summary Parent Preference</string>
    <string name="title_child_preference" />
    <string name="summary_child_preference">Summary Child Preference</string>
    <string name="preference_with_headers">Preferences</string>
    <string name="title_next_screen_toggle_preference">Title Toggle Preference</string>
    <string name="summary_next_screen_toggle_preference">Summary Toggle Preference</string>
    <string name="color1_title">Time Color</string>
    <string name="color1_summary">Change the Color of the Time Digits</string>
    <string name="time_settings_title">Time Settings</string>
    <string name="change_time_settings">Change Time Settings</string>
    <string name="show_time_preference">Show Time</string>
    <string name="title_show_time_preference">Show Time</string>
    <string name="show_time_below_wheel">Show Time Below Wheel</string>
    <string name="show_time_preference_key">Show Time Preference Key</string>
    <string name="title_color_preferences">Color Preferences</string>
    <string name="keep_colors_same_key">Keep Colors Same</string>
    <string name="title_keep_colors_same">Keep Colors Same</string>
    <string name="keep_colors_same">Set all colors equal to first hour color</string>
    <string name="hour_one_color">HourOneColor</string>
    <string name="hour_two_color">HourTwoColor</string>
    <string name="title_hour_one_color">First Hour Color</string>
    <string name="change_hour_one_color">Change the First Hour Color</string>
    <string name="title_hour_two_color">Second Hour Color</string>
    <string name="change_hour_two_color">Change the Second Hour Color</string>
    <string name="minute_one_color">MinuteOneColor</string>
    <string name="minute_two_color">MinuteTwoColor</string>
    <string name="title_minute_one_color">First Minute Color</string>
    <string name="change_minute_one_color">Change the First Minute Color</string>
    <string name="title_minute_two_color">Second Minute Color</string>
    <string name="change_minute_two_color">Change the Second Minute Color</string>
    <string name="preferences">Preferences</string>
    <string name="preferences_main_screen">Preferences Main Screen</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="military_time_preference">Military Time</string>
    <string name="military_time_preference_key">Military Time Preference Key</string>
    <string name="show_military_time">Display Time in Military Format</string>
    <string name="title_military_time_preference">Military Time</string>
    <string name="preferences_screen_toolbar">Preferences Toolbar</string>
    <string name="second_hand_wheel_key">Second Hand Key</string>
    <string name="second_hand_wheel_title">Move Second Hand</string>
    <string name="second_hand_wheel_summary">Move the Inner Wheel Every Second</string>
    <string name="second_hand_wheel_preference">Second Wheel</string>
    <string name="time_preference_category">Change Time Settings</string>
    <string name="current_price">Current Price</string>
    <string name="trend_up_or_down">Trend Up or Down</string>
    <string name="price_detail">Price History</string>
    <string name="price_toolbar">Price Toolbar</string>
    <string name="price_frame">Price Frame</string>
    <string name="price_fragment">Price Fragment</string>
    <string name="donate">Donate</string>
    <string name="like_blockwatch">Like Blockwatch?</string>
    <string name="donate_bitcoin">Donate Bitcoin to promote new releases!</string>
    <string name="address_hash">17FkYpVTnNfZFqkZtiEH6PLYbsei5jxK1b</string>
    <string name="address_copied">Address Copied\nPaste into Wallet App to Donate</string>
    <string name="dont_donate">Don\'t Donate</string>
    <string name="copy_address">Copy Address</string>
    <string name="learn_about_bitcoin_key">Learn About Bitcoin</string>
    <string name="learn_about_bitcoin_summary">Learn More About Bitcoin</string>
    <string name="learn_about_bitcoin_title">About</string>
    <string name="visit_bitcoin_website">Go to Bitcoin.org</string>
    <string name="widget_percentage_change">Percentage Change in Price</string>
    <string name="widget_current_price">Current Price in USD</string>
    <string name="app_intro">Introduction to Blockwatch</string>
    <string name="disclaimer">All data comes from the blockchain.info API.\n\nThe content provided on this site is for information only and not intended as financial advice.</string>
    <string name="disclaimer_key">Disclaimer Key</string>
    <string name="disclaimer_title">Disclaimer</string>
</resources>
