<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/title_color_preferences">

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="@string/hour_one_color"
            android:title="@string/title_hour_one_color"
            android:summary="@string/change_hour_one_color"
            android:defaultValue="@color/red" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="@string/hour_two_color"
            android:title="@string/title_hour_two_color"
            android:summary="@string/change_hour_two_color"
            android:defaultValue="@color/red" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="@string/minute_one_color"
            android:title="@string/title_minute_one_color"
            android:summary="@string/change_minute_one_color"
            android:defaultValue="@color/red" />

        <net.margaritov.preference.colorpicker.ColorPickerPreference
            android:key="@string/minute_two_color"
            android:title="@string/title_minute_two_color"
            android:summary="@string/change_minute_two_color"
            android:defaultValue="@color/red" />

    </PreferenceCategory>

</PreferenceScreen>