<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:key="sorting_pref"
    android:title="Sorting Preferences">

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="@string/hour_one_color"
        android:title="@string/title_hour_one_color"
        android:summary="@string/change_hour_one_color"
        android:defaultValue="@color/lightRed" />

    <net.margaritov.preference.colorpicker.ColorPickerPreference
        android:key="@string/hour_two_color"
        android:title="@string/title_hour_two_color"
        android:summary="@string/change_hour_two_color"
        android:defaultValue="@color/lightRed" />

</PreferenceScreen>