<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/price_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/price_fragment"
    tools:context="com.example.blockwatch.PriceFragment">

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewDetailPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_transaction"
        android:contentDescription="@string/google_ad"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/price_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>