<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/donate_title"
        android:text="@string/like_blockwatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/donate_message"
        android:text="@string/donate_bitcoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="16sp"/>
    <ImageView
        android:src="@mipmap/donate_qr"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:contentDescription="@string/app_name" />
</LinearLayout>