<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/watch_fragment_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/watch_fragment"
            tools:context="com.example.blockwatch.MainActivity"
            android:focusableInTouchMode="true"
            android:descendantFocusability="blocksDescendants">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="360dp"
                android:layout_height="168dp"
                android:layout_margin="0dp"
                android:layout_marginBottom="0dp"
                android:contentDescription="@string/google_ad"
                android:fillViewport="true"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>

        </LinearLayout>

    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
