<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/preferences_main_screen"
    android:fitsSystemWindows="true"
    tools:context="com.example.blockwatch.Preferences">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/settings_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/black"
            android:contentDescription="@string/preferences_screen_toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:navigationIcon="?attr/homeAsUpIndicator"/>
    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:id="@+id/settings_content"
        android:name="com.example.blockwatch.Pref1Fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/settings_toolbar"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:contentDescription="@string/settings_fragment"
        android:nextFocusUp="@id/settings_toolbar"
        tools:context="com.example.blockwatch.Preferences"
        />
</android.support.design.widget.CoordinatorLayout>