<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/blockwatch_main_screen"
    android:fitsSystemWindows="true"
    tools:context="com.example.blockwatch.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/black"
            android:contentDescription="@string/main_screen_toolbar"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <FrameLayout android:id="@+id/swipe_frame_container"
        android:name="com.example.blockwatch.BlockwatchFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/swipe_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar">

            <FrameLayout
                android:id="@+id/blockwatch_fragment"
                android:name="com.example.blockwatch.BlockwatchFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/watch_face"
                android:nextFocusUp="@id/toolbar"
                tools:context="com.example.blockwatch.BlockwatchFragment"
                tools:layout="@layout/fragment_blockwatch" />

        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
    </FrameLayout>
</android.support.design.widget.CoordinatorLayout>
